--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -5,24 +5,13 @@ body {
     margin: 0 auto;
     padding: 0 16px;
 
-
-
     display: flex;
     flex-direction: column;
     min-height: 100vh
 }
 
-.main-content{
-    flex-grow:1;
-}
-
-header{
-    margin-top:16px;
-    margin-bottom: 48px;
-}
-h1 {
-    font-size: 64px;
-    margin-bottom: 16px;
+.main-content {
+    flex-grow: 1;
 }
 
 footer {
@@ -32,19 +21,31 @@ footer {
     padding: 16px 0;
 }
 
+header {
+    margin-top: 16px;
+    margin-bottom: 48px;
+}
+
+h1 {
+    font-size: 64px;
+    margin-bottom: 16px;
+}
+
 header a {
     color: #888888;
     margin-right: 16px;
-    text-decoration: none;}
+    text-decoration: none;
+}
 
-.portrait{
-
+.portrait {
+    width: 250px;
 }
 
 input {
     border: 1px solid #cccccc;
     padding: 8px;
 }
+
 button {
     cursor: pointer;
     border: 1px solid #888888;
