--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
 <head>
-    <meta charset="UTF-8">
     <title>404</title>
-    <link rel="icon" href="/img/cloud.png">
+    <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
-    <div>
-        {{>header}}
+<div class="main-content">
+    {{>header}}
+    <p>{{errorMessage}}</p>
+</div>
 
-      <p>{{error}}</p>
-
-        {{>footer}}
-    </div>
+{{>footer}}
 </body>
+
 </html>
