--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
 <head>
-    <meta charset="UTF-8">
     <title>About</title>
-    <link rel="icon" href="/img/cloud.png">
+    <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
-    <div class="main-content">
-        {{>header}}
-        <img class="portrait" src="/img/llama.jpg">
-    </div>
-    {{>footer}}
+<div class="main-content">
+    {{>header}}
+    <p>This site was created by Andrew Mead. It uses data from mapbox.com and darksky.net!</p>
+    <img class="portrait" src="/img/me.png">
+</div>
+
+{{>footer}}
 </body>
+
 </html>
