--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,36 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Weather</title>
-    <link rel="icon" href="/img/cloud.png">
-    <link rel="stylesheet" href="/css/styles.css">
 
+<html>
+
+<head>
+    <title>Weather</title>
+    <link rel="icon" href="/img/weather.png">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
-    <div class="main-content">
-        {{>header}}
+<div class="main-content">
+    {{>header}}
 
-        <form>
-            <input placeholder="Location">
-            <button>Search</button>
+    <p>Use this site to get your weather!</p>
 
-        </form>
+    <form>
+        <input placeholder="Location">
+        <button>Search</button>
+    </form>
 
-        <p id="message-1"></p>
-        <p id="message-2"></p>
+    <p id="message-1"></p>
+    <p id="message-2"></p>
+</div>
 
+{{>footer}}
 
-    </div>
-
-
-
-
-
-
-    {{>footer}}
-    <script src="/js/app.js"></script>
+<script src="/js/app.js"></script>
 </body>
 
 </html>
