--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>404</title>
-    <link rel="icon" href="/img/weather.png">
+    <link rel="icon" href="/img/cloud.png">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
-
 <body>
-<div class="main-content">
+<div>
     {{>header}}
-    <p>{{errorMessage}}</p>
+
+    <p>{{error}}</p>
+
+    {{>footer}}
 </div>
-
-{{>footer}}
 </body>
-
 </html>
