--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>About</title>
-    <link rel="icon" href="/img/weather.png">
+    <link rel="icon" href="/img/cloud.png">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
-
 <body>
 <div class="main-content">
     {{>header}}
-    <p>This site was created by Andrew Mead. It uses data from mapbox.com and darksky.net!</p>
-    <img class="portrait" src="/img/me.png">
+    <img class="portrait" src="/img/llama.jpg">
 </div>
-
 {{>footer}}
 </body>
-
 </html>
