--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -1,20 +1,17 @@
+
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Help</title>
-    <link rel="icon" href="/img/weather.png">
+    <link rel="icon" href="/img/cloud.png">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
-
 <body>
 <div class="main-content">
     {{>header}}
-    <p>{{helpText}}</p>
 </div>
 
 {{>footer}}
 </body>
-
 </html>
