--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -25,7 +25,7 @@
 </div>
 
 {{>footer}}
-<script src="/js/app.js"></script>
+<script type = "text/javascript" src="/src/js/app.js"></script>
 </body>
 
 </html>
