--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>About</title>
-    <link rel="icon" href="/img/cloud.png">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" href="/Public/img/cloud.png">
+    <link rel="stylesheet" href="/Public/css/styles.css">
 </head>
 <body>
 <div class="main-content">
     {{>header}}
-    <img class="portrait" src="/img/llama.jpg">
+    <img class="portrait" src="/Public/img/llama.jpg">
 </div>
 {{>footer}}
 </body>
