--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Help</title>
-    <link rel="icon" href="/img/cloud.png">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" href="/Public/img/cloud.png">
+    <link rel="stylesheet" href="/Public/css/styles.css">
 </head>
 <body>
 <div class="main-content">
