--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather</title>
-    <link rel="icon" href="/img/cloud.png">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" href="/Public/img/cloud.png">
+    <link rel="stylesheet" href="/Public/css/styles.css">
 
 </head>
 
@@ -25,7 +25,8 @@
 </div>
 
 {{>footer}}
-<script type = "text/javascript" src="/src/js/app.js"></script>
+<script type = "text/javascript" src="/Public/js/app.js"></script>
 </body>
 
 </html>
+src/app.js
