--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -1,6 +1,6 @@
 body {
     color: #333333;
-    font-family: arial;
+    font-family: "Times New Roman";
     max-width: 650px;
     margin: 0 auto;
     padding: 0 16px;
